// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMaps expect render correctly with the map rendered 1`] = `
<div
  className="ais-GeoSearch"
>
  <div
    className="ais-GeoSearch-map"
  />
</div>
`;

exports[`GoogleMaps expect render correctly with the map rendered 2`] = `
<div
  className="ais-GeoSearch"
>
  <div
    className="ais-GeoSearch-map"
  />
  <ContextProvider
    value={
      Object {
        "google": Object {
          "maps": Object {
            "ControlPosition": Object {
              "LEFT_TOP": "left:top",
            },
            "LatLng": [MockFunction],
            "LatLngBounds": [MockFunction],
            "Map": [MockFunction] {
              "calls": Array [
                Array [
                  null,
                  Object {
                    "clickableIcons": false,
                    "fullscreenControl": false,
                    "mapTypeControl": false,
                    "streetViewControl": false,
                    "zoomControlOptions": Object {
                      "position": "left:top",
                    },
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Object {
                    "addListener": [MockFunction] {
                      "calls": Array [
                        Array [
                          "center_changed",
                          [Function],
                        ],
                        Array [
                          "zoom_changed",
                          [Function],
                        ],
                        Array [
                          "dragstart",
                          [Function],
                        ],
                        Array [
                          "idle",
                          [Function],
                        ],
                      ],
                      "results": Array [
                        Object {
                          "type": "return",
                          "value": Object {
                            "remove": [MockFunction],
                          },
                        },
                        Object {
                          "type": "return",
                          "value": Object {
                            "remove": [MockFunction],
                          },
                        },
                        Object {
                          "type": "return",
                          "value": Object {
                            "remove": [MockFunction],
                          },
                        },
                        Object {
                          "type": "return",
                          "value": Object {
                            "remove": [MockFunction],
                          },
                        },
                      ],
                    },
                    "fitBounds": [MockFunction],
                    "getBounds": [MockFunction],
                    "getCenter": [MockFunction],
                    "getProjection": [MockFunction],
                    "getZoom": [MockFunction],
                    "setCenter": [MockFunction] {
                      "calls": Array [
                        Array [
                          Object {
                            "lat": 0,
                            "lng": 0,
                          },
                        ],
                      ],
                      "results": Array [
                        Object {
                          "type": "return",
                          "value": undefined,
                        },
                      ],
                    },
                    "setZoom": [MockFunction] {
                      "calls": Array [
                        Array [
                          1,
                        ],
                      ],
                      "results": Array [
                        Object {
                          "type": "return",
                          "value": undefined,
                        },
                      ],
                    },
                  },
                },
              ],
            },
            "Marker": [MockFunction],
            "OverlayView": [Function],
            "event": Object {
              "addListenerOnce": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "addListener": [MockFunction] {
                        "calls": Array [
                          Array [
                            "center_changed",
                            [Function],
                          ],
                          Array [
                            "zoom_changed",
                            [Function],
                          ],
                          Array [
                            "dragstart",
                            [Function],
                          ],
                          Array [
                            "idle",
                            [Function],
                          ],
                        ],
                        "results": Array [
                          Object {
                            "type": "return",
                            "value": Object {
                              "remove": [MockFunction],
                            },
                          },
                          Object {
                            "type": "return",
                            "value": Object {
                              "remove": [MockFunction],
                            },
                          },
                          Object {
                            "type": "return",
                            "value": Object {
                              "remove": [MockFunction],
                            },
                          },
                          Object {
                            "type": "return",
                            "value": Object {
                              "remove": [MockFunction],
                            },
                          },
                        ],
                      },
                      "fitBounds": [MockFunction],
                      "getBounds": [MockFunction],
                      "getCenter": [MockFunction],
                      "getProjection": [MockFunction],
                      "getZoom": [MockFunction],
                      "setCenter": [MockFunction] {
                        "calls": Array [
                          Array [
                            Object {
                              "lat": 0,
                              "lng": 0,
                            },
                          ],
                        ],
                        "results": Array [
                          Object {
                            "type": "return",
                            "value": undefined,
                          },
                        ],
                      },
                      "setZoom": [MockFunction] {
                        "calls": Array [
                          Array [
                            1,
                          ],
                        ],
                        "results": Array [
                          Object {
                            "type": "return",
                            "value": undefined,
                          },
                        ],
                      },
                    },
                    "idle",
                    [Function],
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": Object {
                      "remove": [MockFunction],
                    },
                  },
                ],
              },
            },
          },
        },
        "instance": Object {
          "addListener": [MockFunction] {
            "calls": Array [
              Array [
                "center_changed",
                [Function],
              ],
              Array [
                "zoom_changed",
                [Function],
              ],
              Array [
                "dragstart",
                [Function],
              ],
              Array [
                "idle",
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Object {
                  "remove": [MockFunction],
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "remove": [MockFunction],
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "remove": [MockFunction],
                },
              },
              Object {
                "type": "return",
                "value": Object {
                  "remove": [MockFunction],
                },
              },
            ],
          },
          "fitBounds": [MockFunction],
          "getBounds": [MockFunction],
          "getCenter": [MockFunction],
          "getProjection": [MockFunction],
          "getZoom": [MockFunction],
          "setCenter": [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "lat": 0,
                  "lng": 0,
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "setZoom": [MockFunction] {
            "calls": Array [
              Array [
                1,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        },
      }
    }
  >
    <div
      testId="children"
    >
      This is the children
    </div>
  </ContextProvider>
</div>
`;

exports[`GoogleMaps expect render correctly without the map rendered 1`] = `
<div
  className="ais-GeoSearch"
>
  <div
    className="ais-GeoSearch-map"
  />
</div>
`;

exports[`GoogleMaps update expect to still render the children when shouldUpdate return false 1`] = `
<div
  className="children"
>
  This is the children
</div>
`;

exports[`GoogleMaps update expect to still render the children when shouldUpdate return false 2`] = `
<div
  className="children"
>
  This is the children updated
</div>
`;
